--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,3 +4,4 @@ spring.datasource.username=sa
 spring.datasource.password=teste
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.mvc.static-path-pattern: /static/**, /public/**
